lab1/Test/L1-A-6-34.output
Error Type B at Line 5
Error Type A at Line 8
Error Type B at Line 11
Error Type B at Line 12
