lab1/Test/L1-A-6-34.cmm
int ;
float xOFahD4gO6kMqG4tnPJV ( ) {
  float bgO ;
  int xwF86blcdawwudUVr [ 1831661799 ] , LuUyCo_0Uk9TLJ 
    [ 1639013359 ] 1309934276 ] = SkaBMqf11kWuJw ( ) / 
    qNnqFAgi * wp * Kjvra5WFiDsPqMf5Fz != tPhOPXGttR <= 
    nIO3LHHmSXJ_wB ;
  float R3POmsyiJ22K59ou [ 382452617 ] := - kGVafjRycBKP5r_dAL 
    ( ctQX ) = xKzTv4UmPFUnjjYk81S , OPCLb_gKPVud8t8n 
    ;
/ }
< 